Fixed TripleGeo database upload configuration

--- a/src/main/webapp/partials/linking/limes.html
+++ b/src/main/webapp/partials/linking/limes.html
@@ -29,7 +29,7 @@
 	<br>
 	<div ng-show="configOptions">
 	<div class="row" ng-controller="ImportFormCtrl">
-			<label for="inputFile" class="col-xs-2 control-label">Upload a File</label>
+			<label for="inputFile" class="col-xs-2 control-label">Upload a LIMES Configuration File (XML)</label>
 		    	<div class="col-xs-8">
 					    <input id="lefile" class="form-control input-sm" type="file" ng-file-select="loadLimesXML($files)" 
 					    		multiple name="fileName" accept=".xml" style="display:none">
