--- a/src/main/webapp/partials/default.html
+++ b/src/main/webapp/partials/default.html
@@ -1,4 +1,3 @@
-
   <div class="contents">
   	<div class="col-sm-2 sidebar">
 			
@@ -23,8 +22,7 @@
 
 	  <div class="col-sm-10 contents" app-view-segment="1">
 	  	<div class="col-sm-8">
- 		<h3 class="green bold">Welcome to the GeoKnow Generator Demo</h3>
- 		<h5>Version 0.1 beta</h5>
+ 		<h3 class="green bold">Welcome to the GeoKnow Generator</h3>
  		<br>
 	  	</div>
 	    </div>
