--- a/src/main/webapp/partials/account.html
+++ b/src/main/webapp/partials/account.html
@@ -16,7 +16,7 @@
 
 <div class="col-xs-4" app-view-segment="1" ng-controller="AccountCtrl">
     <!-- Subscribe to all flash messages. -->
-    <div flash-alert active-class="in" class="alert fade" duration="0">
+    <div flash-alert active-class="in alert" class="fade" duration="0">
         <button type="button" class="close" ng-click="hide()">&times;</button>
         <span class="alert-message">{{flash.message}}</span>
     </div>
