--- a/src/main/webapp/partials/enriching-and-cleaning/geolift.html
+++ b/src/main/webapp/partials/enriching-and-cleaning/geolift.html
@@ -1,6 +1,6 @@
 <div class="contents" ng-controller="GeoliftCtrl">
 	<!-- Subscribe to all flash messages. -->
-	<div flash-alert active-class="in" class="alert fade" duration="10000">
+	<div flash-alert active-class="in alert" class="fade" duration="10000">
 		<button type="button" class="close" ng-click="hide()">&times;</button>
 	  <span class="alert-message">{{flash.message}}</span>
 	</div>
