--- a/src/main/webapp/partials/linking/limes-result.html
+++ b/src/main/webapp/partials/linking/limes-result.html
@@ -1,7 +1,7 @@
 <div class="contents" ng-controller="LimesCtrl" ng-init="StartLimes()">
 
 <!-- Subscribe to all flash messages. -->
-	<div flash-alert active-class="in" class="alert fade" duration="0">
+	<div flash-alert active-class="in alert" class="fade" duration="0">
 		<button type="button" class="close" ng-click="hide()">&times;</button>
   	<span class="alert-message">{{flash.message}}</span>
 	</div>
