--- a/src/main/webapp/partials/default.html
+++ b/src/main/webapp/partials/default.html
@@ -1,5 +1,5 @@
   <div class="contents">
-  	<div class="col-sm-2 sidebar">
+  	<div class="col-xs-2 sidebar">
 			
 			<div class="panel-group" id="accordion" ng-controller="StackMenuCtrl">
 			  <div class="panel panel-default" ng-repeat="group in groups">
@@ -20,8 +20,8 @@
 			
 		</div>
 
-	  <div class="col-sm-10 contents" app-view-segment="1">
-	  	<div class="col-sm-8">
+	  <div class="col-xs-10 contents" app-view-segment="1">
+	  	<div class="col-xs-8">
  		<h3 class="green bold">Ontos Linked Data Suite</h3>
  		<br>
 	  	</div>
