--- a/src/main/webapp/partials/linking/limes.html
+++ b/src/main/webapp/partials/linking/limes.html
@@ -6,7 +6,7 @@
 			dataset="{{}}"></save>
 
 	<!-- Subscribe to all flash messages. -->
-	<div flash-alert active-class="in" class="alert fade" duration="0">
+	<div flash-alert active-class="in alert" class="fade" duration="0">
 		<button type="button" class="close" ng-click="hide()">&times;</button>
   	<span class="alert-message">{{flash.message}}</span>
 	</div>
