--- a/src/main/webapp/partials/settings.html
+++ b/src/main/webapp/partials/settings.html
@@ -1,6 +1,6 @@
-<div class="row contents">
+<div class="contents">
 
-	<div class="col-lg-2">
+	<div class="col-xs-2">
 		
 		<div class="panel-group" id="accordion" ng-controller="SettingsMenuCtrl">
 		  <div class="panel panel-default" ng-repeat="item in items" ng-show="item.admin ? showAdmin : true">
@@ -13,7 +13,7 @@
 		</div>
 	</div>
 		
-	<div class="col-lg-10 contents" app-view-segment="1" ng-controller="GeneralSettingsCtrl" >
+	<div class="col-xs-10 contents" app-view-segment="1" ng-controller="GeneralSettingsCtrl" >
 	  
     <h3 class="green bold">Generator Settings</h3>
 
