--- a/src/main/webapp/partials/extraction-and-loading/triplegeo.html
+++ b/src/main/webapp/partials/extraction-and-loading/triplegeo.html
@@ -1,6 +1,6 @@
 <div class="contents" ng-controller="TripleGeoCtrl">
 	<!-- Subscribe to all flash messages. -->
-	<div flash-alert active-class="in" class="alert fade" duration="0">
+	<div flash-alert active-class="in alert" class="fade" duration="0">
 		<button type="button" class="close" ng-click="hide()">&times;</button>
 	  <span class="alert-message">{{flash.message}}</span>
 	</div>
