--- a/src/main/webapp/partials/authoring/ontology.html
+++ b/src/main/webapp/partials/authoring/ontology.html
@@ -1,5 +1,5 @@
 <div ng-controller="OntologyCtrl">
-    <button type="button" class="btn btn-success btn-large" data-toggle="modal" data-target="#modalOntology" ng-click="new();">Add new ontology</button>
+    <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#modalOntology" ng-click="new();">Add new ontology</button>
 
     <div class="modal fade" id="modalOntology">
         <div class="modal-header">
@@ -47,7 +47,7 @@
         </div>
 
         <div class="modal-footer">
-            <button type="submit" class="btn-sm btn-success" ng-click="add();">Add</button>
+            <button type="submit" class="btn-sm btn-primary" ng-click="add();">Add</button>
             <button type="button" class="btn-sm btn-default" data-dismiss="modal">Cancel</button>
         </div>
     </div>
