--- a/src/main/webapp/partials/extraction-and-loading/d2rq-task.html
+++ b/src/main/webapp/partials/extraction-and-loading/d2rq-task.html
@@ -1,7 +1,7 @@
 <div ng-controller="D2RQTaskCtrl">
     <br/>
 
-    <button type="button" class="btn btn-success btn-large" data-toggle="modal" data-target="#modalTask" ng-click="new();">Add new task</button>
+    <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#modalTask" ng-click="new();">Add new task</button>
 
     <div class="modal fade" id="modalTask">
         <form name="taskForm" class="form-horizontal InputForm" role="form" novalidate>
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn-sm btn-success" ng-click="add();" ng-disabled="taskForm.$invalid || isAdding()">Add</button>
+                    <button type="submit" class="btn-sm btn-primary" ng-click="add();" ng-disabled="taskForm.$invalid || isAdding()">Add</button>
                     <button type="button" class="btn-sm btn-default" data-dismiss="modal">Cancel</button>
                 </div>
             </div>
