--- a/src/main/webapp/partials/settings/data-sources.html
+++ b/src/main/webapp/partials/settings/data-sources.html
@@ -11,6 +11,8 @@
     ng-click="new();" data-toggle="modal" data-target="#modalEndpoint">Add new Endpoint</button>
 
   <div class="modal fade" id="modalEndpoint">
+  <div class="modal-dialog">
+  <div class="modal-content">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       <h5 class="modal-title green bold">{{modaltitle}}</h5>
@@ -60,6 +62,8 @@
       <button type="submit" class="btn-sm btn-primary" ng-click="save()" ng-disabled="endpointForm.$invalid || isUnchanged(endpoint)">Save</button>
       <button type="button" class="btn-sm btn-default" data-dismiss="modal" >Cancel</button>
     </div>
+  </div>
+  </div>
   </div><!-- /.modal window -->
 
   <table class="table table-striped">
@@ -97,6 +101,8 @@
     ng-click="new();" data-toggle="modal" data-target="#modalDatabase">Add new Database</button>
 
   <div class="modal fade" id="modalDatabase">
+  <div class="modal-dialog">
+  <div class="modal-content">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       <h5 class="modal-title green bold">{{modaltitle}}</h5>
@@ -182,6 +188,8 @@
       <button type="submit" class="btn-sm btn-primary" ng-click="save()" ng-disabled="databaseForm.$invalid || isUnchanged(database)">Save</button>
       <button type="button" class="btn-sm btn-default" data-dismiss="modal">Cancel</button>
     </div>
+  </div>
+  </div>
   </div>
 
   <table class="table table-striped">
