--- a/src/main/webapp/partials/settings/datasets.html
+++ b/src/main/webapp/partials/settings/datasets.html
@@ -5,6 +5,8 @@
   <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#modalGraph" ng-click="new();">Add new dataset</button>
 
   <div class="modal fade" id="modalGraph">
+  <div class="modal-dialog">
+  <div class="modal-content">
     <form name="graphForm" class="form-horizontal InputForm" role="form" novalidate>
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -93,6 +95,8 @@
         <button type="button" class="btn-sm btn-default" data-dismiss="modal">Cancel</button>
       </div>      
     </form>
+ 	</div>
+ 	</div>
  	</div>
 
   <h4>User Graphs</h4>
@@ -229,6 +233,8 @@
   <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#modalGroup" ng-click="newGroup();">Add new graph group</button>
 
   <div class="modal fade" id="modalGroup">
+  <div class="modal-dialog">
+  <div class="modal-content">
       <form name="groupForm" class="form-horizontal InputForm" role="form" novalidate>
           <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -290,6 +296,8 @@
               <button type="button" class="btn-sm btn-default" data-dismiss="modal">Cancel</button>
           </div>
       </form>
+  </div>
+  </div>
   </div>
 
   <h4>
