--- a/src/main/webapp/partials/authoring/ontology.html
+++ b/src/main/webapp/partials/authoring/ontology.html
@@ -1,5 +1,4 @@
 <div ng-controller="OntologyCtrl">
-    <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#modalOntology" ng-click="new();">Add new ontology</button>
 
     <div class="modal fade" id="modalOntology">
         <div class="modal-header">
@@ -52,14 +51,15 @@
         </div>
     </div>
 
-    <h4>
+<div class="row below">
+    <h3 class="green bold">
         <span class="btn-group">
             <button type="button" class="btn btn-link reset" ng-click="refreshOntologies()">
                 <i class="glyphicon glyphicon-refresh" aria-hidden="true"></i>
             </button>
         </span>
         Ontologies
-    </h4>
+    </h3>
 
     <table class="table table-striped">
         <thead>
@@ -78,8 +78,12 @@
         </tr>
         </tbody>
     </table>
+    
+    <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#modalOntology" ng-click="new();">Add new ontology</button>
 
     <div class="modal fade" id="fullModal">
+    <div class="modal-dialog">
+    <div class="modal-content">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
             <h5 class="modal-title green bold">MiniDix</h5>
@@ -87,5 +91,8 @@
         <div class="modal-body">
             <modal-iframe></modal-iframe>
         </div>
+    </div>
+    </div>
+    </div>
     </div>
 </div>
