--- a/src/main/webapp/partials/extraction-and-loading/d2rq.html
+++ b/src/main/webapp/partials/extraction-and-loading/d2rq.html
@@ -1,7 +1,8 @@
+<div class="row below">
 <h3 class="green bold">D2RQ</h3>
 
 <!-- Subscribe to all flash messages. -->
-<div flash-alert active-class="in" class="alert fade" duration="0">
+<div flash-alert active-class="in alert" class="fade" duration="0">
     <button type="button" class="close" ng-click="hide()">&times;</button>
     <span class="alert-message">{{flash.message}}</span>
 </div>
@@ -11,5 +12,6 @@
         <a href="{{item.route}}">{{item.name}}</a>
     </li>
 </ul>
+</div>
 
 <div app-view-segment="2"></div>
