Fixing more modals

--- a/src/main/webapp/partials/authoring/ontology.html
+++ b/src/main/webapp/partials/authoring/ontology.html
@@ -1,6 +1,8 @@
 <div ng-controller="OntologyCtrl">
 
     <div class="modal fade" id="modalOntology">
+    <div class="modal-dialog">
+    <div class="modal-content">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
             <h5 class="modal-title green bold">Add ontology</h5>
@@ -49,6 +51,8 @@
             <button type="submit" class="btn-sm btn-primary" ng-click="add();">Add</button>
             <button type="button" class="btn-sm btn-default" data-dismiss="modal">Cancel</button>
         </div>
+    </div>
+    </div>
     </div>
 
 <div class="row below">
