--- a/src/main/webapp/partials/authoring/ontowiki.html
+++ b/src/main/webapp/partials/authoring/ontowiki.html
@@ -14,6 +14,8 @@
   </div>
   <!-- Modal -->
   <div class="modal fade" id="fullModal" >
+  <div class="modal-dialog">
+    <div class="modal-content">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       <h5 class="modal-title green bold">{{component.label}}</h5>
@@ -22,5 +24,7 @@
       <modal-iframe></modal-iframe>
     </div>     
   </div><!-- /.modal -->
+  </div>
+  </div>
 </div>
 
