--- a/src/main/webapp/partials/extraction-and-loading/d2rq-mapping.html
+++ b/src/main/webapp/partials/extraction-and-loading/d2rq-mapping.html
@@ -53,7 +53,7 @@
         <form name="mappingForm" class="form-horizontal InputForm" role="form" novalidate>
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h5 class="modal-title green bold">Add mapping</h5>
+                <h5 class="modal-title green bold">{{modaltitle}}</h5>
             </div>
             <div class="modal-body">
                 <div class="form-group">
