--- a/src/main/webapp/partials/extraction-and-loading/d2rq-mapping.html
+++ b/src/main/webapp/partials/extraction-and-loading/d2rq-mapping.html
@@ -2,7 +2,7 @@
     <div class="row below">
     <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#modalMappingGroup" ng-click="newMappingGroup();">Add new mapping group</button>
 	</div>
-	
+
     <div class="modal fade" id="modalMappingGroup">
     <div class="modal-dialog">
     <div class="modal-content">
@@ -57,8 +57,8 @@
             </div>
             <div class="modal-body">
                 <div class="form-group">
-                    <label class="col-lg-2 control-label">Name</label>
-                    <div class="col-lg-10">
+                    <label class="col-lg-1 control-label">Name</label>
+                    <div class="col-lg-11">
                         <input type="text" class="form-control" id="name" name="name" ng-model="mapping.name" required/>
                         <div class="error" ng-show="mappingForm.name.$dirty && mappingForm.name.$invalid">Invalid:
                             <span ng-show="mappingForm.name.$error.required">Specify name</span>
@@ -66,8 +66,8 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-lg-2 control-label">Table</label>
-                    <div class="col-lg-10">
+                    <label class="col-lg-1 control-label">Table</label>
+                    <div class="col-lg-11">
                         <select id="table" class="form-control" ng-model="mapping.table" ng-options="t for t in tables | orderBy:'toString()'" ng-change="updateColumns()" required></select>
                         <div class="error" ng-show="mappingForm.table.$dirty && mappingForm.table.$invalid">Invalid:
                             <span ng-show="mappingForm.table.$error.required">Select table</span>
@@ -75,8 +75,8 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-lg-2 control-label">Class</label>
-                    <div class="col-lg-10">
+                    <label class="col-lg-1 control-label">Class</label>
+                    <div class="col-lg-11">
                         <select id="class" class="form-control" ng-model="mapping.class" ng-options="c as c.uri for c in ontologyClasses | orderBy:'uri'" ng-change="updateProperties()" required></select>
                         <div class="error" ng-show="mappingForm.class.$dirty && mappingForm.class.$invalid">Invalid:
                             <span ng-show="mappingForm.class.$error.required">Select class</span>
@@ -84,8 +84,8 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-lg-2 control-label">Pattern type</label>
-                    <div class="col-lg-10">
+                    <label class="col-lg-1 control-label">Pattern type</label>
+                    <div class="col-lg-11">
                         <select id="ptype" class="form-control" ng-model="mapping.ptype" ng-options="pt.value as pt.label for pt in patternTypes | orderBy:'label'" required></select>
                         <div class="error" ng-show="mappingForm.ptype.$dirty && mappingForm.ptype.$invalid">Invalid:
                             <span ng-show="mappingForm.ptype.$error.required">Select class</span>
@@ -93,14 +93,14 @@
                     </div>
                 </div>
                 <div class="form-group" ng-show="mapping.ptype=='uriColumn'">
-                    <label class="col-lg-2 control-label">URI Column</label>
-                    <div class="col-lg-10">
+                    <label class="col-lg-1 control-label">URI Column</label>
+                    <div class="col-lg-11">
                         <select id="uriColumn" class="form-control" ng-model="mapping.uriColumn" ng-options="c for c in tableColumns | orderBy:'toString()'"></select>
                     </div>
                 </div>
                 <div class="form-group" ng-show="mapping.ptype=='patternColumns'">
-                    <label class="col-lg-2 control-label">Pattern Columns</label>
-                    <div class="col-lg-10">
+                    <label class="col-lg-1 control-label">Pattern Columns</label>
+                    <div class="col-lg-11">
                         <ul class="list-unstyled">
                             <li ng-repeat="c in tableColumns | orderBy:'toString()'">
                                 <input type="checkbox" ng-checked="mapping.patternColumns.indexOf(c) > -1" ng-click="togglePatternColumn(c)"/>{{c}}
@@ -111,8 +111,8 @@
 
                 <div ng-show="mapping.class!=null && mapping.table!=null">
                     <div class="row">
-                        <label class="col-lg-2 control-label">Data Properties</label>
-                        <div class="col-lg-10">
+                        <label class="col-lg-1 control-label">Data Properties</label>
+                        <div class="col-lg-11">
                             <table class="table table-striped">
                                 <tr>
                                     <th>Property</th>
@@ -134,7 +134,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <button type="button" ng-click="addNewDataProperty()" class="btn-sm btn-primary col-lg-offset-3">Add New Data Property</button>
+                        <button type="button" ng-click="addNewDataProperty()" class="btn-sm btn-primary col-lg-offset-2">Add New Data Property</button>
                     </div>
                 </div>
 
@@ -142,8 +142,8 @@
 
                 <div ng-show="mapping.class!=null && mapping.table!=null">
                     <div class="row">
-                        <label class="col-lg-2 control-label">Object Properties</label>
-                        <div class="col-lg-10">
+                        <label class="col-lg-1 control-label">Object Properties</label>
+                        <div class="col-lg-11">
                             <table class="table table-striped">
                                 <tr>
                                     <th>Property</th>
@@ -167,22 +167,41 @@
                                             <label class="col-lg-3">Mapping</label>
                                             <select id="ref" class="col-lg-9" ng-model="prop.ref" ng-change="updateRefTable(prop)" ng-options="m as m.name for m in mapping.group.mappings | filter:notCurrent | orderBy:'name'"></select>
                                         </div>
-                                        <div class="row" ng-show="prop.mappingType=='ref' && prop.ref!=null">
-                                            <label class="col-lg-3">Join Condition</label>
-                                            <div class="col-lg-9">
+                                        <div ng-show="prop.mappingType=='ref' && prop.ref!=null">
+                                            <label>Join Condition:</label>
+                                            <div class="row">
+                                                <label class="col-lg-3">Type</label>
+                                                <select class="col-lg-9" ng-model="prop.join.type" ng-options="type.value as type.label for type in joinConditionTypes | orderBy:label"></select>
+                                            </div>
+                                            <div class="row" ng-show="prop.join.type=='linkingTable'">
+                                                <label class="col-lg-3">Linking Table</label>
+                                                <select class="col-lg-9" ng-model="prop.join.linkingTable" ng-options="t for t in tables | orderBy:'toString()'" ng-change="updateLinkingTable(prop)"></select>
+                                            </div>
+                                            <div>
                                                 <table class="table table-striped">
                                                     <tr>
                                                         <th>{{prop.join.table1}}</th>
+                                                        <th ng-show="prop.join.type=='linkingTable'">{{prop.join.linkingTable}}</th>
                                                         <th>{{prop.join.table2}}</th>
                                                     </tr>
                                                     <tr>
                                                         <td>
-                                                            <select ng-model="prop.join.columns[0].first" ng-options="c for c in tableColumns | orderBy:'toString()'">
+                                                            <select ng-model="prop.join.table1column" ng-options="c for c in tableColumns | orderBy:'toString()'">
                                                                 <option></option>
                                                             </select>
                                                         </td>
                                                         <td>
-                                                            <select ng-model="prop.join.columns[0].second" ng-options="c for c in prop.ref.dataStructure | orderBy:'toString()'">
+                                                            <div class="row" ng-show="prop.join.type=='linkingTable'">
+                                                                <select ng-model="prop.join.linkingTableColumn1" ng-options="c for c in prop.join.linkingTableStructure | orderBy:'toString()'">
+                                                                    <option></option>
+                                                                </select>
+                                                                <select ng-model="prop.join.linkingTableColumn2" ng-options="c for c in prop.join.linkingTableStructure | orderBy:'toString()'">
+                                                                    <option></option>
+                                                                </select>
+                                                            </div>
+                                                        </td>
+                                                        <td>
+                                                            <select ng-model="prop.join.table2column" ng-options="c for c in prop.ref.dataStructure | orderBy:'toString()'">
                                                                 <option></option>
                                                             </select>
                                                         </td>
@@ -199,7 +218,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <button type="button" ng-click="addNewObjectProperty()" class="btn-sm btn-primary col-lg-offset-3">Add New Object Property</button>
+                        <button type="button" ng-click="addNewObjectProperty()" class="btn-sm btn-primary col-lg-offset-2">Add New Object Property</button>
                     </div>
                 </div>
 
@@ -210,7 +229,7 @@
             </div>
         </form>
     </div>
-	
+
 	<div class="row below">
     <h4>
         <span class="btn-group">
@@ -236,9 +255,10 @@
             <td>
                 <button type="button" class="btn btn-default btn-xs" ng-click="deleteMappingGroup('{{mg.id}}')"><span class="glyphicon glyphicon-trash"></span></button>
                 <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#modalMapping" ng-click="newMapping(mg)"><span class="glyphicon glyphicon-plus"></span></button>
+                <button type="button" class="btn btn-default btn-xs" ng-show="!mg.actual" ng-click="actualizeMappingGroup('{{mg.id}}')"><span class="glyphicon glyphicon-check"></span></button>
             </td>
             <td>{{mg.name}}</td>
-            <td>{{mg.ontologyUri}} (v. {{mg.ontologyVersion}})</td>
+            <td>{{mg.ontologyUri}} (v. {{mg.ontologyVersion}}{{mg.actual ? "" : ", not actual"}})</td>
             <td>{{mg.dbConnection}}</td>
             <td>
                 <ul class="list-unstyled">
