--- a/src/main/webapp/partials/default.html
+++ b/src/main/webapp/partials/default.html
@@ -25,6 +25,11 @@
  		<h3 class="green bold">Welcome to the GeoKnow Generator</h3>
  		<br>
 	  	</div>
+	  	<!-- Subscribe to all flash messages. -->
+			<div flash-alert active-class="in alert" class="fade" duration="0">
+				<button type="button" class="close" ng-click="hide()">&times;</button>
+		  	<span class="alert-message">{{flash.message}}</span>
+			</div>
 	    </div>
   </div>
 
