--- a/src/main/webapp/partials/querying-and-exploration/facete.html
+++ b/src/main/webapp/partials/querying-and-exploration/facete.html
@@ -9,7 +9,7 @@
   </dl>
 
   <p>A tool for exploring (geographical) Linked Data datasets on the Web. To get started select a data set from the drop down menu.</p>
-  <form class="form-horizontal InputForm" role="form" >
+  <form class="form-horizontal InputForm" role="form">
     <div class="form-group">
       <label for="Endpoint">Endpoint</label>
       <input type="url" class="form-control" id="Endpoint" disabled="disabled" ng-model="facete.service"></input>
@@ -31,14 +31,16 @@
   </form>
 
   <!-- Modal -->
-  <div class="modal fade" id="fullModal" >
+  <div class="modal fade" id="fullModal">
+  <div class="modal-content">
     <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      <button type="button" class="close" ng-click="close('#modalLogin')" aria-hidden="true">&times;</button>
       <h5 class="modal-title green bold">Facete</h5>
     </div>
     <div class="modal-body">
       <modal-iframe></modal-iframe>
-    </div>      
-	</div><!-- /.modal -->
+    </div>
+ </div>  
+ </div><!-- /.modal -->
 </div>
 
