--- a/src/main/webapp/partials/querying-and-exploration/mappify.html
+++ b/src/main/webapp/partials/querying-and-exploration/mappify.html
@@ -32,13 +32,15 @@
 
   <!-- Modal -->
   <div class="modal fade" id="fullModal" >
+  <div class="modal-content">
     <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      <button type="button" class="close" ng-click="close('#modalLogin')" aria-hidden="true">&times;</button>
       <h5 class="modal-title green bold">Mappify</h5>
     </div>
     <div class="modal-body">
       <modal-iframe></modal-iframe>
-    </div>      
-	</div><!-- /.modal -->
+    </div>
+    </div>
+ </div><!-- /.modal -->
 </div>
 
