--- a/src/main/webapp/partials/authoring/ontology.html
+++ b/src/main/webapp/partials/authoring/ontology.html
@@ -31,7 +31,6 @@
     <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#modalOntology" ng-click="new();">Add new ontology</button>
 
 <div class="modal fade" id="modalOntology">
-    <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -83,19 +82,16 @@
         </div>
     </div>
     </div>
-    </div>
 
     <div class="modal fade" id="fullModal">
-    <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <button type="button" class="close" ng-click="close('#modalLogin')" aria-hidden="true">&times;</button>
             <h5 class="modal-title green bold">MiniDix</h5>
         </div>
         <div class="modal-body">
             <modal-iframe></modal-iframe>
         </div>
-    </div>
     </div>
     </div>
     </div>
