--- a/src/main/webapp/partials/extraction-and-loading/sparqlify.html
+++ b/src/main/webapp/partials/extraction-and-loading/sparqlify.html
@@ -27,6 +27,7 @@
 
   <!-- Modal -->
   <div class="modal fade" id="fullModal" >
+  <div class="modal-content">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       <h5 class="modal-title green bold">Sparqlify</h5>
@@ -34,6 +35,7 @@
     <div class="modal-body">
       <modal-iframe></modal-iframe>
     </div>    
+    </div>
 	</div><!-- /.modal -->
 </div>
 
