--- a/src/main/webapp/partials/querying-and-exploration/facete.html
+++ b/src/main/webapp/partials/querying-and-exploration/facete.html
@@ -31,7 +31,8 @@
   </form>
 
   <!-- Modal -->
-  <div class="modal fade" id="fullModal" >
+  <div class="modal fade" id="fullModal">
+  <div class="modal-content">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       <h5 class="modal-title green bold">Facete</h5>
@@ -39,6 +40,7 @@
     <div class="modal-body">
       <modal-iframe></modal-iframe>
     </div>      
+    </div>
 	</div><!-- /.modal -->
 </div>
 
