--- a/src/main/webapp/partials/querying-and-exploration/virtuoso.html
+++ b/src/main/webapp/partials/querying-and-exploration/virtuoso.html
@@ -37,6 +37,7 @@
   </div>
   <!-- Modal -->
   <div class="modal fade" id="fullModal">
+  <div class="modal-content">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       <h5 class="modal-title green bold">Virtuoso SPARQLEndpoint</h5>
@@ -44,6 +45,7 @@
     <div class="modal-body">
       <modal-iframe></modal-iframe>
     </div>     
+    </div>
   </div><!-- /.modal -->  
 </div>
 
