minidix frame closing fixed; disable delete and add buttons in Ontologies tab for unauthorized user

--- a/src/main/webapp/partials/authoring/ontology.html
+++ b/src/main/webapp/partials/authoring/ontology.html
@@ -20,7 +20,7 @@
         <tbody>
         <tr ng-repeat="onto in ontologies">
             <td>
-                <button type="button" class="btn btn-default btn-xs" ng-click="delete('{{onto}}')"><span class="glyphicon glyphicon-trash"></span></button>
+                <button type="button" class="btn btn-default btn-xs" ng-click="delete('{{onto}}')" ng-disabled="!isLoggedIn()"><span class="glyphicon glyphicon-trash"></span></button>
                 <button type="button" class="btn btn-default btn-xs" data-toggle="modal" ng-click="setUrl('{{onto}}'); openModal();"><span class="glyphicon glyphicon-edit"></span></button>
             </td>
             <td>{{onto}}</td>
@@ -28,7 +28,7 @@
         </tbody>
     </table>
     
-    <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#modalOntology" ng-click="new();">Add new ontology</button>
+    <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#modalOntology" ng-click="new();" ng-disabled="!isLoggedIn()">Add new ontology</button>
 
 <div class="modal fade" id="modalOntology">
     <div class="modal-content">
@@ -86,7 +86,7 @@
     <div class="modal fade" id="fullModal">
     <div class="modal-content">
         <div class="modal-header">
-            <button type="button" class="close" ng-click="close('#modalLogin')" aria-hidden="true">&times;</button>
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
             <h5 class="modal-title green bold">MiniDix</h5>
         </div>
         <div class="modal-body">
