--- a/src/main/webapp/partials/authoring/ontology.html
+++ b/src/main/webapp/partials/authoring/ontology.html
@@ -83,7 +83,7 @@
     </div>
     </div>
 
-    <div class="modal fade" id="fullModal">
+    <div class="modal" id="fullModal">
     <div class="modal-content">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
