uploaded documents widgets

--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -343,3 +343,9 @@ form{
     width: 1100px !important;
 }
 */
+
+.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
+
+.scrollable {
+    overflow: auto;
+}
